<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        app:tabContentStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sight_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sight"
            android:icon="@drawable/ic_round_place"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/cafe_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe"
            android:icon="@drawable/ic_baseline_fastfood"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/hotel_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel"
            android:icon="@drawable/ic_baseline_local_hotel"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/store_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_store"
            android:icon="@drawable/ic_baseline_local_grocery_store_"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/taxi_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxi"
            android:icon="@drawable/ic_baseline_local_taxi"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/map_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:icon="@drawable/ic_baseline_map"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>